--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,93 @@
 span {
   text-align: center;
 }
-
+h1 { padding-top: 90px; color: white; font-family: 'Lato', sans-serif; font-size: 54px; font-weight: 300; line-height: 58px; margin: 0 0 58px; }
 
 button {
   content: "";
   clear: both;
+}
+
+.button {
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 20px;
+  letter-spacing: 4px;
+  position: relative;
+  border: none;
+  color: #fff;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #FF512F;
+  border-radius: 4px;
+  background-image: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%)
+}
+
+.button:hover {
+  background-position: right center;
+  background: #fff;
+  box-shadow: 0px 2px 10px 5px #FF512F;
+  color: #000;
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
+.button:focus { outline:0; }
+
+/* Background effects edited from https://codepen.io/chris22smith/pen/RZogMa */
+html {
+  height:100%;
+}
+
+body {
+  margin:0;
+}
+
+h1, h3, h2, span{
+  color: white;
+  font-family:monospace;
+}
+h3, h2, span{
+  font-size: 30px;
+}
+
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
 }
